--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ group = "sawfowl.localetest"
 version = "${major}.${minor}.${patch}-${api}-${suffix}"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 repositories {
@@ -38,8 +38,8 @@ minecraft {
 }
 
 dependencies {
-    implementation "org.spongepowered:spongeapi:8.0.0-SNAPSHOT"
-    implementation 'org.spongepowered:spongevanilla:1.16.5-8.0.0-RC705:universal@jar'
-	implementation 'com.github.SawFowl:LocaleAPI:API8-SNAPSHOT'
-	//implementation fileTree(dir: 'libs', include: '*.jar')
+    implementation "org.spongepowered:spongeapi:8.0.0"
+    //implementation 'org.spongepowered:spongevanilla:1.16.5-8.0.0-RC705:universal@jar'
+	//implementation 'com.github.SawFowl:LocaleAPI:API8-SNAPSHOT'
+	implementation fileTree(dir: 'libs', include: '*.jar')
 }
