--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,6 @@ minecraft {
 
 dependencies {
     implementation "org.spongepowered:spongeapi:8.0.0"
-    //implementation 'org.spongepowered:spongevanilla:1.16.5-8.0.0-RC705:universal@jar'
-	//implementation 'com.github.SawFowl:LocaleAPI:API8-SNAPSHOT'
-	implementation fileTree(dir: 'libs', include: '*.jar')
+	implementation 'com.github.SawFowl:LocaleAPI:2.1'
+	//implementation fileTree(dir: 'libs', include: '*.jar')
 }
