--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ group = "sawfowl.localetest"
 version = "${major}.${minor}.${patch}-${api}-${suffix}"
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
@@ -39,6 +39,6 @@ minecraft {
 
 dependencies {
     implementation "org.spongepowered:spongeapi:8.0.0"
-	implementation 'com.github.SawFowl:LocaleAPI:2.1'
+	implementation 'com.github.SawFowl:LocaleAPI:2.1.0'
 	//implementation fileTree(dir: 'libs', include: '*.jar')
 }
