--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id("java")
 	id("org.spongepowered.gradle.plugin") version "2.0.2"
 	id("eclipse")
-    id("org.spongepowered.gradle.vanilla") version "0.2"
+		id("org.spongepowered.gradle.vanilla") version "0.2.1-SNAPSHOT"
 }
 
 group = "sawfowl.localetest"
@@ -25,7 +25,7 @@ repositories {
 }
 
 minecraft {
-    version("1.16.5")
+	version("1.19.5")
 }
 
 tasks.withType(JavaCompile) {
