--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id("java")
 	id("org.spongepowered.gradle.plugin") version "2.0.2"
 	id("eclipse")
-	id("org.spongepowered.gradle.vanilla") version "0.2.1-SNAPSHOT"
+	id("org.spongepowered.gradle.vanilla") version "0.2"
 }
 
 group = "sawfowl.localetest"
