--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,13 @@ plugins {
 	id("java")
 	id("org.spongepowered.gradle.plugin") version "2.0.2"
 	id("eclipse")
-	id("org.spongepowered.gradle.vanilla") version "0.2.1-SNAPSHOT"
 }
 
 group = "sawfowl.localetest"
 version = "${major}.${minor}.${patch}-${api}-${suffix}"
 
 java {
-	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 repositories {
@@ -24,22 +23,19 @@ repositories {
 	}
 }
 
-minecraft {
-	version("1.19.4")
-}
-
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
 dependencies {
-	implementation "org.spongepowered:spongeapi:10.0.0"
+	implementation "org.spongepowered:spongeapi:8.0.0"
 	implementation "com.github.SawFowl:LocaleAPI:2.6.0"
+	implementation 'com.github.SawFowl:CommandPack:1.0'
 	//implementation fileTree(dir: 'libs', include: '*.jar')
 }
 
 sponge {
-	apiVersion("10.0.0")
+	apiVersion("8.0.0")
 	loader {
 		name("java_plain")
 		version("1.0")
@@ -56,12 +52,12 @@ sponge {
 		dependency("spongeapi") {
 			optional(false)
 			loadOrder("after")
-			version("10.0.0")
+			version("8.0.0")
 		}
 		dependency("localeapi") {
 			optional(false)
 			loadOrder("after")
-			version("3.0.0")
+			version("2.6.0")
 		}
 	}
 }
