--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ tasks.withType(JavaCompile) {
 
 dependencies {
 	implementation "org.spongepowered:spongeapi:10.0.0"
-	implementation "com.github.SawFowl:LocaleAPI:2.6.0"
-	//implementation fileTree(dir: 'libs', include: '*.jar')
+	//implementation "com.github.SawFowl:LocaleAPI:3.1.0"
+	implementation fileTree(dir: 'libs', include: '*.jar')
 }
 
 sponge {
@@ -61,7 +61,7 @@ sponge {
 		dependency("localeapi") {
 			optional(false)
 			loadOrder("after")
-			version("3.0.0")
+			version("3.1.0")
 		}
 	}
 }
