--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ repositories {
 		url = "https://repo.spongepowered.org/repository/maven-public"
 	}
 	maven { 
-		name = "AspectMaven"
-		url 'https://maven.aspect-realms.ru/repository/maven-public/'
+		name = "JitPack"
+		url 'https://jitpack.io' 
 	}
 }
 
